Фикс кнопки адаптив

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
             <span>Webpack</span>
           </div>
         </div>
-        <a href="#faq">
+        <a href="#faqs">
           <button class="promo__btn">
             <label>Записаться на обучение</label>
           </button>
