--- a/index.html
+++ b/index.html
@@ -727,7 +727,7 @@
 
   <section class="about-teacher">
     <div class="container">
-      <h1 class="main-title mb-5">О преподавателе</h1>
+      <h1 class="main-title mb-5 ms-4 ms-md-0">О преподавателе</h1>
       <div class="teacher d-flex">
         <div class="teacher__main text-center">
           <img class="img-fluid teacher__image rounded-circle" src="img/SergeyTimofeev.jpg" alt="Teacher">
@@ -760,7 +760,7 @@
 
   <section class="price" id="programm">
     <div class="container">
-      <h1 class="main-title mb-5">Стоимость обучения</h1>
+      <h1 class="main-title mb-5 ms-4 ms-md-0">Стоимость обучения</h1>
       <div class="price-card">
         <ul class="price-card__pack-list">
           <h3 class="price-card__heading">Что вы получаете:</h3>
