--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <link rel="stylesheet" href="style.css">
+
 </head>
 
 <body>
@@ -795,7 +796,9 @@
         </div>
       </div>
       <div class="regist__btn-wrap">
-        <a href="" class="regist__btn d-flex justify-content-center align-items-center">
+        <a onclick="_tmr.push({ type: 'reachGoal', id: 3414943, goal: 'GetLead'});"
+          href="https://vk.me/join/O7at9etnoVGid4VPcjeFWh7mwMIEP/X7oaU="
+          class="regist__btn d-flex justify-content-center align-items-center">
           <label for="" class="text-center">Записаться на курс</label>
         </a>
       </div>
@@ -878,11 +881,8 @@
 
   </script>
 
-  <script>
-
-
-
-  </script>
+  <script
+    type="text/javascript"> var _tmr = window._tmr || (window._tmr = []); _tmr.push({ type: 'reachGoal', id: 3414943, goal: 'GetLead' });</script>
 </body>
 
 </html>
